--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <meta property="og:image" conten="/thumbnail.png" />
+    <meta property="og:title" conten="NARAS" />
+    <meta
+      property="og:description"
+      conten="전 세계 국가들의 정보를 확인하세요!"
+    />
+
+    <title>NARAS</title>
   </head>
   <body>
     <div id="root"></div>
