--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <meta property="og:image" content="/thumbnail.png" />
     <meta property="og:title" content="NARAS" />
     <meta
       property="og:description"
-      conten="전 세계 국가들의 정보를 확인하세요!"
+      content="전 세계 국가들의 정보를 확인하세요!"
     />
 
     <title>NARAS</title>
